@@ -1,3 +1,8 @@
+2008-06-15  Simon Martin  <simartin@users.sourceforge.net>
+
+	PR c++/35317
+	* g++.dg/other/dtor2.C: New test.
+
 2008-06-13  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/36507
